--- a/src/component/views/MainViews/mainViews.css
+++ b/src/component/views/MainViews/mainViews.css
@@ -1,5 +1,13 @@
 .container {
-    width: 60vw;
-    height: 80vh;
-    background-color: coral;
+    background-color: cornflowerblue;
+    padding: 12px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+}
+.img-logo {
+    width: 8rem;
+    margin-bottom: 12px;
 }
