--- a/src/component/atom/Button/button.css
+++ b/src/component/atom/Button/button.css
@@ -6,6 +6,9 @@
     padding: 10px;
     margin-bottom: 6px;
   }
+  .btn:focus {
+    outline: none;
+  }
   .btn:hover {
     border-color: #ffff;
   }
