--- a/src/component/views/MainViews/mainViews.css
+++ b/src/component/views/MainViews/mainViews.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: cornflowerblue;
+    background-color: greenyellow;
     padding: 12px;
     height: 100vh;
     display: flex;
