add loading and change background color

--- a/src/component/views/MainViews/mainViews.css
+++ b/src/component/views/MainViews/mainViews.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: greenyellow;
+    background-color: #6B8E23;
     padding: 12px;
     height: 100vh;
     display: flex;
