--- a/src/component/views/PredictedViews/predictedViews.css
+++ b/src/component/views/PredictedViews/predictedViews.css
@@ -1,4 +1,7 @@
-#container-predicted{
+#predicted {
+    text-align: center;
+}
+.container-predicted{
     display: grid;
     grid-template-columns: 45vw 45vw;
     height: 70vh;
